Fix little glitch with horizontal scroll bar

--- a/holy-grail-layout/scss/pf-holy-grail-layout.scss
+++ b/holy-grail-layout/scss/pf-holy-grail-layout.scss
@@ -20,7 +20,6 @@
     "header"
     "sidebar"
     "content";
-  width: 100vw;
   height: 100vh;
 }
 
